--- a/index.css
+++ b/index.css
@@ -1,75 +1,91 @@
-body {
-    background-color: #1D252E;
-    background-image: url('https://picsum.photos/id/1000/5626/3635');
-    background-repeat: no-repeat;
-    background-size: 100vw;
-    background-position: top center; 
-  } 
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    font-size: 2rem;
+    background: white;
+  }
+
+
   
-  p, h2, span {
-    color: #1D252E;
+  .top li {
+    display: inline-block;
+    margin: 5px;
+    list-style: none;
+   }
+
+   .top li a {
+    color: black;
+    text-decoration: none;
+    font-size:40px;
+    transition: all ease-in-out 250ms;
+  }
+  .top  a:hover{
+    color:rgb(214, 16, 16);
   }
   
-  header {
-    min-height: 300px;
+  /* BANNER */
+  .banner {
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: url(https://picsum.photos/id/1000/5626/3635);
   }
   
-  h1 {
-    color: #FFFFFF;
+  /* PROJECTS */
+  .project .tags {
+    display:flex;
+    flex-wrap: wrap;
+  
+  }
+  
+  .project .tags li {
+    border: 1px solid #000;
+    border-radius: 2px;
+    padding: 0.25rem;
+    margin-top: 0.25rem;
+    margin-right: 0.25rem;
+  }
+
+  img{
+    max-width: 100%;
+  }
+  
+  /* ABOUT */
+  .about {
     text-align: center;
-    margin-top: 240px;
-    font-size: 3rem;
+  }
+  .about img {
+    border-radius: 50%;
+    width: 8rem;
+    height: 8rem;
+    margin: 0 auto;
   }
   
-  .hidden {
-    display: none;
-  } 
-  
-  .box {
-    background-color: #ffffff;
-    padding: 30px 60px;
-    max-width: 800px;
-    min-width: 400px;
-    margin-bottom: 60px;
+  .about p {
+    font-size: 20px;
   }
   
-  .btn {
-    border: none;
-    color: #FFFFFF;
-    background-color: #1D252E;
-    padding: 5px 20px;
-    transition: all 0.3s ease 0s;
+  /* FOOTER */
+  footer {
+    text-align: center;
+    background: lightgrey;
   }
   
-  .btn:hover, .btn:active, .btn:focus {
-    background-color: #295F12;
+  footer p {
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
   }
   
-  .answer-options, .question-box p {
-    margin-bottom: 30px;
+  footer p + p {
+    margin-top: 0.5em;
   }
   
-  .option {
-    margin-right: 10px;
-  }
-  
-  .navigation-row {
-    margin-top: 30px;
-  }
-  
-  .number-correct {
-    text-align: left;
+  .media li + li {
     margin-top: 0;
-  }
-  
-  #submit-answer, #restart-quiz {
-    float: right;
-  }
-  
-  .green-highlight {
-    border: 1px solid green;
-  }
-  
-  .red-highlight {
-    border: 1px solid red;
   }
