--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
     background-color: #1D252E;
-    background-image: url('https://picsum.photos/id/1000/5626/3635');
+    background-image: url('https://i.imgur.com/sOJJOou.png');
     background-repeat: no-repeat;
     background-size: 100vw;
     background-position: top center; 
